--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,4 +1,38 @@
+/* ELEMENT STYLES */
+
 body {
   background-color: darkorange;
   color: white;
+  text-transform: uppercase;
+}
+
+header {
+  color: black;
+  padding: 5px 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  border-bottom: solid 2px black;
+}
+
+header h1 {
+  flex-grow: 1;
+  font-size: 1.5em;
+  letter-spacing: 2px;
+}
+
+/* COMPONENT STYLES */
+
+.scoreboard {
+  background: black;
+  width: 700px;
+  margin:70px auto;
+  border-radius: 6px;
+}
+
+.player {
+  display:flex;
+  font-size: 1.2em;
+  border-bottom: solid 2px black;
+  letter-spacing: 2px;
 }
