--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,24 +1,33 @@
 /* ELEMENT STYLES */
 
 body {
-  background-color: darkorange;
-  color: white;
+  background-color: #e8e7e7;
+  font-family: arial;
   text-transform: uppercase;
 }
 
 header {
-  color: black;
+  color: #fff;
   padding: 5px 10px;
   text-align: center;
   display: flex;
   align-items: center;
-  border-bottom: solid 2px black;
+  background-color: #8063FA;
+  border-bottom: solid 2px #D4CAFF;
 }
 
 header h1 {
   flex-grow: 1;
   font-size: 1.5em;
   letter-spacing: 2px;
+  font-weight: normal;
+}
+
+svg {
+  width: 28px;
+  height: 19px;
+  margin-right: 5px;
+  fill: #F0F0F0
 }
 
 /* FORMS */
@@ -29,34 +38,29 @@ button {
 
 form {
   display: flex;
-}
-
-input {
-  flex-grow: 1;
-  border-width: 0 0 1px 0;
-  margin: 15px 10px 15px 15px;
-  padding: 10px;
-  border-radius: 5px;
-  border-style: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  outline: none;
+  background-color: #8063FA
 }
 
 /* COMPONENT STYLES */
 
 .scoreboard {
-  background: black;
+  background: #fff;
   width: 700px;
-  margin:70px auto;
+  margin: 70px auto;
   border-radius: 6px;
+  box-shadow: 0 2px 0 rgb(103, 104, 250);
+  overflow: hidden;
 }
 
 .player {
   display:flex;
   font-size: 1.2em;
-  border-bottom: solid 2px black;
+  border-bottom: solid 2px #EEEEEE;
   letter-spacing: 2px;
+}
+
+.player:last-of-type {
+  border-bottom-color: #D4CAFF;
 }
 
 .player-name:hover {
@@ -65,7 +69,7 @@ input {
 
 .player-name,
 .counter-score {
-  color: black;
+  color: #2F2366;
 }
 
 .player-name {
@@ -77,10 +81,12 @@ input {
 .stats {
   width: 170px;
   margin: 0 0 0 28px;
+  font-weight: normal;
 }
 
 .stats td:first-child {
   text-align: right;
+  font-weight: normal;
   letter-spacing: 2px;
   font-size: .7em;
 }
@@ -94,21 +100,27 @@ input {
   width: 190px;
 }
 
+.counter-action:hover {
+  color: #fff;
+}
+
 .counter-action {
   border: none;
   font-size: 1.15em;
   font-weight: bold;
+  color: #B0AEBA;
   display: block;
   padding: 20px 20px;
   outline: none;
+  cursor: pointer;
 }
 
 .increment:hover {
-  background: tomato;
+  background: #83D97C;
 }
 
 .decrement:hover {
-  background: tomato;
+  background: #EF5350;
 }
 
 .counter-score {
