--- a/server/public/main.css
+++ b/server/public/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  color: #fff;
+  color: #FFF;
   padding: 5px 10px;
   text-align: center;
   display: flex;
@@ -25,13 +25,54 @@ header h1 {
 
 /* FORMS */
 
-button {
-  outline: none;
-}
-
 form {
   display: flex;
   background-color: #8063FA
+}
+
+input[type=text] {
+  flex-grow: 1;
+  border-width: 0 0 1px 0;
+  margin: 15px 10px 15px 15px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #5B45B9;
+  border-style: none;
+  text-shadow: none;
+  text-transform: uppercase;
+  color: #C7BCF8;
+  letter-spacing: 2px;
+  outline: none;
+}
+
+input[type=text] {
+  color: #C7BCF8;
+  letter-spacing: 2px;
+}
+
+input[type=text]:focus{
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+input[type=text] {
+  display: block;
+  font-size: .6em;
+  margin: 15px 15px 15px 0;
+  padding: 10px;
+  background-color: #44338D;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-shadow: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+button,
+input[type=submit] {
+  outline: none;
 }
 
 /* COMPONENT STYLES */
